[package]
name = "lynx"
version = "0.1.0"
authors = ["djrakita <djrakita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.23.0", features=["serde-serialize"]}
rayon = "1.5.0"
ncollide3d = "0.26.0"
ncollide2d = "0.19.0"
rand = "0.7.2"
urdf-rs = "0.5.0"
collada = "0.13.0"
stl_io = "0.5.2"
tobj = "2.0.2"
termion = "*"
meshopt = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4"
vpsearch = "1.3.5"
num_cpus = "1.0"
nlopt = "0.5.3"
optimization_engine = "0.7.1"
image = "0.23.14"
imageproc = "0.22.0"
thread-id = "3.3.0"
bevy = "0.5"
bevy_mod_picking = "0.4"
bevy_stl = {version="0.3.0", features = ["wireframe"]}
bevy_obj = "0.5.0"
bevy_egui = "0.4.2"
RustyXML = "0.1.0"
bevy_prototype_debug_lines = "0.3.1"

[lib]
name = "lynx_lib"
path = "src/lib.rs"
# crate-type = ["rlib", "dylib"]


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
